manifests/deployment.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-deployment
  labels:
    app: ping
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping
  template:
    metadata:
      labels:
        app: ping
    spec:
      containers:
        - name: ping
          image: docker.io/nnazo/ping-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ping-service
spec:
  selector:
    app: ping
  ports:
    - protocol: TCP
      port: 38080
      targetPort: 8080
